mdapi/Custom/objects/PTL_Line_Item__c.object
<CustomObject>
    <description>This is part of the Rehab deployment and supports the integration with the HD App. (Note: following the deployment of Nitro phase 2, this will be retired in place of the HD Budget Walk.)</description>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PTL__c</fullName>
        <label>PTL</label>
        <referenceTo>PTL__c</referenceTo>
        <relationshipLabel>PTL Line Items</relationshipLabel>
        <relationshipName>PTL_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Quantity__c *  Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PTL Line Item</label>
    <nameField>
        <label>PTL Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PTL Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>